打包单文件

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <!-- Icon reference inlined or removed for standalone packaging -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Document</title>
     <!-- External stylesheet removed for standalone packaging -->
   </head>
   <body>
